<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.coolguy.jared.scripturereference.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="35sp"
        android:textAlignment="center"
        android:id="@+id/welcome"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textIsSelectable="false"
        android:textStyle="bold|italic"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/book"
        android:id="@+id/Book"
        android:layout_below="@+id/welcome"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:singleLine="true"
        android:textColor="#d50000"
        android:textColorHighlight="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/chapter"
        android:id="@+id/Chapter"
        android:textColor="#00c853"
        android:layout_alignBaseline="@+id/hint_chapter"
        android:layout_alignBottom="@+id/hint_chapter"
        android:layout_alignParentStart="true"
        android:textColorHighlight="#ffffff"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/verse"
        android:id="@+id/Verse"
        android:textColor="#304ffe"
        android:layout_alignBaseline="@+id/hint_verse"
        android:layout_alignBottom="@+id/hint_verse"
        android:layout_alignParentStart="true"
        android:textColorHighlight="#ffffff"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:id="@+id/button"
        android:layout_below="@+id/Verse"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:textColor="#ffffff"
        android:background="#000000"
        android:width="200dp"
        android:onClick="onClick" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/hint_book"
        android:layout_alignBaseline="@+id/Book"
        android:layout_alignBottom="@+id/Book"
        android:layout_toEndOf="@+id/Chapter"
        android:layout_marginStart="18dp"
        android:hint="@string/bookHint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/hint_chapter"
        android:layout_below="@+id/hint_book"
        android:layout_alignStart="@+id/hint_book"
        android:hint="@string/chapterHint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/hint_verse"
        android:layout_below="@+id/hint_chapter"
        android:layout_alignStart="@+id/hint_chapter"
        android:hint="@string/verseHint" />

</RelativeLayout>
